# iot-lib-formulas

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Kconfig  README.md  coverage.runsettings  project.ps1  sonar-project.properties  test.ps1
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  development.yml  release.yml
.pipeline/: azure-devops.yml
docs/: CONTRIBUTING.md
docs/wiki/: developing.md  headers.md  how_to_use.md
docs/wiki/headers/: adc.md  temperature.md  thermistor.md  voltage_divider.md
lib/: CMakeLists.txt
lib/include/: common.h  constants.h  conversion.h
lib/include/adc/: adc.h
lib/include/iot_lib_formulas/: adc.h  float_type.h  temperature.h  thermistor.h  voltage_divider.h
lib/include/thermistor/: thermistor.h
lib/include/volt_divider/: volt_divider.h
lib/private_include/: infrastructure.h
lib/src/: adc.c  thermistor.c  voltage_divider.c
lib/src/adc/: adc.c
lib/src/thermistor/: thermistor.c
lib/src/volt_divider/: volt_divider.c
test/: CMakeLists.txt  common_infra.hpp  conversion_test.cpp  test_runner.cpp
test/adc/: adc_test.cpp
test/tests/: adc_test.cpp  temperature_test.cpp  thermistor_test.cpp  volt_divider_test.cpp
test/thermistor/: conversion_test.cpp  thermistor_test.cpp
test/volt_divider/: volt_divider_test.cpp
